# otter-cli

./: Cargo.toml  README.md
src/: blockchains.rs  client.rs  endpoints.rs  listener.rs  main.rs  models.rs  output.rs
src/blockchains/: solana.rs
src/clap_args/: mod.rs
src/cli/: mod.rs
src/client/: auth.rs  models.rs  output.rs
