[package]
name = "otter-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
inquire = "0.6.1"
once_cell = "1.17.0"
otter-auth-client = { git = "https://github.com/otter-dev/otter-auth-client" }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
strum = { version = "0.24.1", features = ["derive"] }
tokio = { version = "1.28.0", features = ["macros", "rt"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["json"] }

[[bin]]
name = "suite-cli"
path = "src/main.rs"

